Add CRUD twig templates, bootstrap style

--- a/src/AppBundle/Resources/config/doctrine/AddressBook.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/AddressBook.orm.yml
@@ -42,4 +42,5 @@ AppBundle\Entity\AddressBook:
             type: string
             length: '255'
             column: picture_url
+            nullable: true
     lifecycleCallbacks: {  }
