--- a/src/AppBundle/Resources/config/routing/addressbook.yml
+++ b/src/AppBundle/Resources/config/routing/addressbook.yml
@@ -4,7 +4,7 @@ addressbook_index:
     methods:  GET
 
 addressbook_show:
-    path:     /{id}/show
+    path:     /show/{id}
     defaults: { _controller: "AppBundle:AddressBook:show" }
     methods:  GET
 
@@ -14,11 +14,11 @@ addressbook_new:
     methods:  [GET, POST]
 
 addressbook_edit:
-    path:     /{id}/edit
+    path:     /edit/{id}
     defaults: { _controller: "AppBundle:AddressBook:edit" }
     methods:  [GET, POST]
 
 addressbook_delete:
-    path:     /{id}/delete
+    path:     /delete/{id}
     defaults: { _controller: "AppBundle:AddressBook:delete" }
     methods:  DELETE
